<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/name">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/first_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/textfield_bg"
                android:hint="@string/first_name_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/last_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/textfield_bg"
                android:hint="@string/last_name_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </RelativeLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/etAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textfield_bg"
        android:inputType="textEmailAddress"
        android:hint="@string/keeb_enthusiast"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/etAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textfield_bg"
        android:hint="081222223333"
        android:inputType="number"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/birthdate"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <DatePicker
        android:id="@+id/etBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield_bg"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintLeft_toLeftOf="@+id/tvBirthdate"
        app:layout_constraintRight_toRightOf="@id/tvBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthdate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUpdate" />


</androidx.constraintlayout.widget.ConstraintLayout>