<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="275dp"
            android:layout_height="241dp"
            android:layout_gravity="center"
            android:src="@drawable/logo1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_with_email"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_in"
            android:background="@drawable/login_btn"/>

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:background="@drawable/login_btn"-->
<!--            android:text="Continue WIth Google"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="15sp" />-->

    </LinearLayout>

</RelativeLayout>