<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvPass"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/password_hint"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:background="@drawable/textfield_bg"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvConfpass"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/confirm_password_hint"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/etConfpass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvConfpass"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:background="@drawable/textfield_bg"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/cancel_btn"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>